@@ -19,6 +19,7 @@ import static org.junit.jupiter.engine.Constants.DEFAULT_PARALLEL_EXECUTION_MODE
 import static org.junit.jupiter.engine.Constants.DEFAULT_TEST_METHOD_ORDER_PROPERTY_NAME;
 import static org.junit.jupiter.engine.Constants.PARALLEL_EXECUTION_ENABLED_PROPERTY_NAME;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClass;
+import static org.junit.platform.launcher.LauncherConstants.CRITICAL_DISCOVERY_ISSUE_SEVERITY_PROPERTY_NAME;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
@@ -52,8 +53,15 @@ import org.junit.jupiter.api.TestMethodOrder;
 import org.junit.jupiter.api.TestReporter;
 import org.junit.jupiter.api.fixtures.TrackLogRecords;
 import org.junit.jupiter.engine.JupiterTestEngine;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.junit.platform.commons.logging.LogRecordListener;
 import org.junit.platform.commons.util.ClassUtils;
+import org.junit.platform.engine.DiscoveryIssue;
+import org.junit.platform.engine.DiscoveryIssue.Severity;
+import org.junit.platform.engine.support.descriptor.ClassSource;
+import org.junit.platform.engine.support.descriptor.MethodSource;
+import org.junit.platform.testkit.engine.EngineDiscoveryResults;
 import org.junit.platform.testkit.engine.EngineTestKit;
 import org.junit.platform.testkit.engine.Events;
 import org.mockito.Mockito;
@@ -88,7 +96,7 @@ class OrderedMethodTests {
 		// on the class names.
 		assertThat(testClass.getSuperclass().getName()).isGreaterThan(testClass.getName());
 
-		var tests = executeTestsInParallel(testClass);
+		var tests = executeTestsInParallel(testClass, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -110,7 +118,7 @@ class OrderedMethodTests {
 		// on the class names.
 		assertThat(testClass.getSuperclass().getName()).isLessThan(testClass.getName());
 
-		var tests = executeTestsInParallel(testClass);
+		var tests = executeTestsInParallel(testClass, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -121,7 +129,7 @@ class OrderedMethodTests {
 
 	@Test
 	void displayName() {
-		var tests = executeTestsInParallel(DisplayNameTestCase.class);
+		var tests = executeTestsInParallel(DisplayNameTestCase.class, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -144,7 +152,7 @@ class OrderedMethodTests {
 
 	@Test
 	void orderAnnotationWithNestedTestClass() {
-		var tests = executeTestsInParallel(OrderAnnotationWithNestedClassTestCase.class);
+		var tests = executeTestsInParallel(OrderAnnotationWithNestedClassTestCase.class, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -155,7 +163,7 @@ class OrderedMethodTests {
 	}
 
 	private void assertOrderAnnotationSupport(Class<?> testClass) {
-		var tests = executeTestsInParallel(testClass);
+		var tests = executeTestsInParallel(testClass, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -166,16 +174,17 @@ class OrderedMethodTests {
 
 	@Test
 	void random() {
-		var tests = executeTestsInParallel(RandomTestCase.class);
+		var tests = executeTestsInParallel(RandomTestCase.class, Random.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
 		assertThat(threadNames).hasSize(1);
 	}
 
-	@Test
-	void defaultOrderer() {
-		var tests = executeTestsInParallel(WithoutTestMethodOrderTestCase.class, OrderAnnotation.class);
+	@ParameterizedTest
+	@ValueSource(classes = { WithoutTestMethodOrderTestCase.class, ClassTemplateTestCase.class })
+	void defaultOrderer(Class<?> testClass) {
+		var tests = executeTestsInParallel(testClass, OrderAnnotation.class);
 
 		tests.assertStatistics(stats -> stats.succeeded(callSequence.size()));
 
@@ -270,35 +279,62 @@ class OrderedMethodTests {
 	}
 
 	@Test
-	void misbehavingMethodOrdererThatAddsElements(@TrackLogRecords LogRecordListener listener) {
+	void reportsDiscoveryIssuesForIneffectiveOrderAnnotations() throws Exception {
+		var results = discoverTests(WithoutTestMethodOrderTestCase.class, OrderAnnotation.class);
+		assertThat(results.getDiscoveryIssues()).isEmpty();
+
+		results = discoverTests(WithoutTestMethodOrderTestCase.class, null);
+		assertIneffectiveOrderAnnotationIssues(results.getDiscoveryIssues());
+
+		results = discoverTests(WithoutTestMethodOrderTestCase.class, Random.class);
+		assertIneffectiveOrderAnnotationIssues(results.getDiscoveryIssues());
+	}
+
+	@Test
+	void misbehavingMethodOrdererThatAddsElements() {
 		Class<?> testClass = MisbehavingByAddingTestCase.class;
 
-		executeTestsInParallel(testClass).assertStatistics(stats -> stats.succeeded(2));
+		var discoveryIssues = discoverTests(testClass, null).getDiscoveryIssues();
+		assertThat(discoveryIssues).hasSize(1);
+
+		var issue = discoveryIssues.getFirst();
+		assertThat(issue.severity()).isEqualTo(Severity.WARNING);
+		assertThat(issue.message()).isEqualTo(
+			"MethodOrderer [%s] added 2 MethodDescriptor(s) for test class [%s] which will be ignored.",
+			MisbehavingByAdding.class.getName(), testClass.getName());
+		assertThat(issue.source()).contains(ClassSource.from(testClass));
+
+		executeTestsInParallel(testClass, null, Severity.ERROR) //
+				.assertStatistics(stats -> stats.succeeded(2));
 
 		assertThat(callSequence).containsExactly("test1()", "test2()");
-
-		var expectedMessage = "MethodOrderer [" + MisbehavingByAdding.class.getName()
-				+ "] added 2 MethodDescriptor(s) for test class [" + testClass.getName() + "] which will be ignored.";
-
-		assertExpectedLogMessage(listener, expectedMessage);
 	}
 
 	@Test
-	void misbehavingMethodOrdererThatImpersonatesElements(@TrackLogRecords LogRecordListener listener) {
+	void misbehavingMethodOrdererThatImpersonatesElements() {
 		Class<?> testClass = MisbehavingByImpersonatingTestCase.class;
 
-		executeTestsInParallel(testClass).assertStatistics(stats -> stats.succeeded(2));
+		executeTestsInParallel(testClass, Random.class).assertStatistics(stats -> stats.succeeded(2));
 
 		assertThat(callSequence).containsExactlyInAnyOrder("test1()", "test2()");
-
-		assertThat(listener.stream(Level.WARNING)).isEmpty();
 	}
 
 	@Test
-	void misbehavingMethodOrdererThatRemovesElements(@TrackLogRecords LogRecordListener listener) {
+	void misbehavingMethodOrdererThatRemovesElements() {
 		Class<?> testClass = MisbehavingByRemovingTestCase.class;
 
-		executeTestsInParallel(testClass).assertStatistics(stats -> stats.succeeded(4));
+		var discoveryIssues = discoverTests(testClass, null).getDiscoveryIssues();
+		assertThat(discoveryIssues).hasSize(1);
+
+		var issue = discoveryIssues.getFirst();
+		assertThat(issue.severity()).isEqualTo(Severity.WARNING);
+		assertThat(issue.message()).isEqualTo(
+			"MethodOrderer [%s] removed 2 MethodDescriptor(s) for test class [%s] which will be retained with arbitrary ordering.",
+			MisbehavingByRemoving.class.getName(), testClass.getName());
+		assertThat(issue.source()).contains(ClassSource.from(testClass));
+
+		executeTestsInParallel(testClass, null, Severity.ERROR) //
+				.assertStatistics(stats -> stats.succeeded(4));
 
 		assertThat(callSequence) //
 				.containsExactlyInAnyOrder("test1()", "test2()", "test3()", "test4()") //
@@ -307,37 +343,33 @@ class OrderedMethodTests {
 				.containsSubsequence("test1()", "test4()") // removed item is re-added before ordered item
 				.containsSubsequence("test2()", "test3()") // removed item is re-added before ordered item
 				.containsSubsequence("test2()", "test4()");// removed item is re-added before ordered item
-
-		var expectedMessage = "MethodOrderer [" + MisbehavingByRemoving.class.getName()
-				+ "] removed 2 MethodDescriptor(s) for test class [" + testClass.getName()
-				+ "] which will be retained with arbitrary ordering.";
-
-		assertExpectedLogMessage(listener, expectedMessage);
 	}
 
-	private void assertExpectedLogMessage(LogRecordListener listener, String expectedMessage) {
-		// @formatter:off
-		assertThat(listener.stream(Level.WARNING)
-				.map(LogRecord::getMessage))
-				.contains(expectedMessage);
-		// @formatter:on
-	}
-
-	private Events executeTestsInParallel(Class<?> testClass) {
-		return executeTestsInParallel(testClass, Random.class);
+	private EngineDiscoveryResults discoverTests(Class<?> testClass, Class<? extends MethodOrderer> defaultOrderer) {
+		return testKit(testClass, defaultOrderer, Severity.INFO).discover();
 	}
 
 	private Events executeTestsInParallel(Class<?> testClass, Class<? extends MethodOrderer> defaultOrderer) {
-		// @formatter:off
-		return EngineTestKit
-				.engine("junit-jupiter")
-				.configurationParameter(PARALLEL_EXECUTION_ENABLED_PROPERTY_NAME, "true")
-				.configurationParameter(DEFAULT_PARALLEL_EXECUTION_MODE, "concurrent")
-				.configurationParameter(DEFAULT_TEST_METHOD_ORDER_PROPERTY_NAME, defaultOrderer.getName())
-				.selectors(selectClass(testClass))
-				.execute()
+		return executeTestsInParallel(testClass, defaultOrderer, Severity.INFO);
+	}
+
+	private Events executeTestsInParallel(Class<?> testClass, Class<? extends MethodOrderer> defaultOrderer,
+			Severity criticalSeverity) {
+		return testKit(testClass, defaultOrderer, criticalSeverity) //
+				.execute() //
 				.testEvents();
-		// @formatter:on
+	}
+
+	private static EngineTestKit.Builder testKit(Class<?> testClass, Class<? extends MethodOrderer> defaultOrderer,
+			Severity criticalSeverity) {
+		var testKit = EngineTestKit.engine("junit-jupiter") //
+				.configurationParameter(PARALLEL_EXECUTION_ENABLED_PROPERTY_NAME, "true") //
+				.configurationParameter(DEFAULT_PARALLEL_EXECUTION_MODE, "concurrent") //
+				.configurationParameter(CRITICAL_DISCOVERY_ISSUE_SEVERITY_PROPERTY_NAME, criticalSeverity.name());
+		if (defaultOrderer != null) {
+			testKit.configurationParameter(DEFAULT_TEST_METHOD_ORDER_PROPERTY_NAME, defaultOrderer.getName());
+		}
+		return testKit.selectors(selectClass(testClass));
 	}
 
 	private Events executeRandomTestCaseInParallelWithRandomSeed(String seed) {
@@ -355,6 +387,19 @@ class OrderedMethodTests {
 				.execute()
 				.testEvents();
 		// @formatter:on
+	}
+
+	private static void assertIneffectiveOrderAnnotationIssues(List<DiscoveryIssue> discoveryIssues) throws Exception {
+		assertThat(discoveryIssues).hasSize(3);
+		assertThat(discoveryIssues).extracting(DiscoveryIssue::severity).containsOnly(Severity.INFO);
+		assertThat(discoveryIssues).extracting(DiscoveryIssue::message) //
+				.allMatch(it -> it.startsWith("Ineffective @Order annotation on method")
+						&& it.endsWith("It will not be applied because MethodOrderer.OrderAnnotation is not in use."));
+		var testClass = WithoutTestMethodOrderTestCase.class;
+		assertThat(discoveryIssues).extracting(DiscoveryIssue::source).extracting(Optional::orElseThrow) //
+				.containsExactlyInAnyOrder(MethodSource.from(testClass.getDeclaredMethod("test1")),
+					MethodSource.from(testClass.getDeclaredMethod("test2")),
+					MethodSource.from(testClass.getDeclaredMethod("test3")));
 	}
 
 	// -------------------------------------------------------------------------
@@ -615,7 +660,11 @@ class OrderedMethodTests {
 	static class OuterTestCase {
 
 		@Nested
-		class NestedOrderAnnotationTestCase extends OrderAnnotationTestCase {
+		class InnerTestCase {
+
+			@Nested
+			class NestedOrderAnnotationTestCase extends OrderAnnotationTestCase {
+			}
 		}
 	}
 
@@ -814,8 +863,8 @@ class OrderedMethodTests {
 		@Override
 		public void orderMethods(MethodOrdererContext context) {
 			context.getMethodDescriptors().sort(comparing(MethodDescriptor::getDisplayName));
-			context.getMethodDescriptors().remove(0);
-			context.getMethodDescriptors().remove(0);
+			context.getMethodDescriptors().removeFirst();
+			context.getMethodDescriptors().removeFirst();
 		}
 	}
 
@@ -843,6 +892,9 @@ class OrderedMethodTests {
 		void test1() {
 		}
 
+	}
+
+	static class ClassTemplateTestCase extends WithoutTestMethodOrderTestCase {
 	}
 
 }
